--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "superbase:init": "supabase init",
+    "superbase:login": "supabase login",
+    "superbase:link": "supabase link --project-ref wbskaofqrxkgvnrkwpep",
+    "db:migrate:new": "supabase migration new projects-schema",
+    "db:reset": "supabase db reset --linked"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.46.2",
@@ -19,6 +24,7 @@
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.3.0",
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.9.3",
     "@vitejs/plugin-vue": "^5.2.1",
@@ -29,6 +35,7 @@
     "eslint-plugin-vue": "^9.30.0",
     "npm-run-all2": "^7.0.1",
     "prettier": "^3.3.3",
+    "supabase": "^2.0.0",
     "typescript": "~5.6.3",
     "unplugin-vue-router": "^0.10.8",
     "vite": "^6.0.1",
