--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "superbase:link": "supabase link --project-ref wbskaofqrxkgvnrkwpep",
     "db:migrate:new": "supabase migration new projects-schema",
     "db:reset": "supabase db reset --linked",
-    "db:seed": "node --env-file=.env database/seed.js"
+    "db:seed": "node --env-file=.env database/seed.js",
+    "superbase:type": "npx supabase gen types typescript --project-id wbskaofqrxkgvnrkwpep --schema public > database/types.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.46.2",
