--- a/package.json
+++ b/package.json
@@ -14,14 +14,20 @@
     "superbase:init": "supabase init",
     "superbase:login": "supabase login",
     "superbase:link": "supabase link --project-ref wbskaofqrxkgvnrkwpep",
-    "db:migrate:new": "supabase migration new projects-schema",
+    "db:migrate:new": "supabase migration new",
     "db:reset": "supabase db reset --linked",
     "db:seed": "node --env-file=.env database/seed.js",
     "superbase:type": "npx supabase gen types typescript --project-id wbskaofqrxkgvnrkwpep --schema public > database/types.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.46.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.468.0",
     "pinia": "^2.2.6",
+    "radix-vue": "^1.9.11",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
@@ -33,11 +39,13 @@
     "@vue/eslint-config-prettier": "^10.1.0",
     "@vue/eslint-config-typescript": "^14.1.3",
     "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^9.30.0",
     "npm-run-all2": "^7.0.1",
     "prettier": "^3.3.3",
     "supabase": "^2.0.0",
+    "tailwindcss": "^3.4.16",
     "typescript": "~5.6.3",
     "unplugin-vue-router": "^0.10.8",
     "vite": "^6.0.1",
