--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "supabase": "^2.0.0",
     "tailwindcss": "^3.4.16",
     "typescript": "~5.6.3",
+    "unplugin-auto-import": "^0.19.0",
     "unplugin-vue-router": "^0.10.8",
     "vite": "^6.0.1",
     "vite-plugin-vue-devtools": "^7.6.5",
