--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "tailwindcss": "^3.4.16",
     "typescript": "~5.6.3",
     "unplugin-auto-import": "^0.19.0",
+    "unplugin-vue-components": "^0.28.0",
     "unplugin-vue-router": "^0.10.8",
     "vite": "^6.0.1",
     "vite-plugin-vue-devtools": "^7.6.5",
