--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "superbase:type": "npx supabase gen types typescript --project-id wbskaofqrxkgvnrkwpep --schema public > database/types.ts"
   },
   "dependencies": {
+    "@formkit/vue": "^1.6.9",
     "@supabase/supabase-js": "^2.46.2",
     "@tanstack/vue-table": "^8.20.5",
     "@vueuse/core": "^12.4.0",
