--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,6 +1,6 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue","typed-router.d.ts","database/*","auto-imports.d.ts","components.d.ts"],
+  "include": ["env.d.ts", "src/**/*", "src/**/*.vue","typed-router.d.ts","database/*","auto-imports.d.ts","components.d.ts","formkit.config.ts","formkit.theme.ts"],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
     "composite": true,
